[gd_scene load_steps=4 format=2]

[ext_resource path="res://Raymarching/Raymarching.gd" type="Script" id=1]
[ext_resource path="res://Raymarching/Raymarching.shader" type="Shader" id=2]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/position = null
shader_param/direction = null
shader_param/clip = null
shader_param/addPlane = false
shader_param/fov = 1.0
shader_param/maxIter = 1000
shader_param/precision = 0.001
shader_param/useMod = false
shader_param/twist = 0.0
shader_param/addTubes = true
shader_param/shading = 0
shader_param/lightPos = Vector3( 10, 20, 30 )
shader_param/op = 0
shader_param/ambiant = 0.1

[node name="Raymarching" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Canvas" type="ColorRect" parent="."]
material = SubResource( 1 )
margin_top = -1.0
margin_right = 600.0
margin_bottom = 599.0
color = Color( 0.45098, 0.172549, 0.172549, 1 )

[node name="OutputLabel" type="Label" parent="."]
margin_left = 684.333
margin_top = 533.333
margin_right = 800.333
margin_bottom = 568.333
text = "Label "

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -351.0
margin_top = 38.0
margin_right = -269.0
margin_bottom = -429.0

[node name="Plane" type="CheckBox" parent="Buttons"]
margin_right = 95.0
margin_bottom = 24.0
text = "Add plane"

[node name="Label" type="Label" parent="Buttons"]
margin_top = 28.0
margin_right = 95.0
margin_bottom = 42.0
text = "Max iterations:"

[node name="MaxIter" type="LineEdit" parent="Buttons"]
margin_top = 46.0
margin_right = 95.0
margin_bottom = 70.0
focus_mode = 1
text = "1000"
focus_mode = 1

[node name="Label2" type="Label" parent="Buttons"]
margin_top = 74.0
margin_right = 95.0
margin_bottom = 88.0
text = "Precision:"

[node name="Precision" type="LineEdit" parent="Buttons"]
margin_top = 92.0
margin_right = 95.0
margin_bottom = 116.0
focus_mode = 1
text = "0.001"
focus_mode = 1

[node name="Label4" type="Label" parent="Buttons"]
margin_top = 120.0
margin_right = 95.0
margin_bottom = 134.0
text = "Clip:"

[node name="Clip" type="LineEdit" parent="Buttons"]
margin_top = 138.0
margin_right = 95.0
margin_bottom = 162.0
focus_mode = 1
text = "1000"
focus_mode = 1

[node name="Label3" type="Label" parent="Buttons"]
margin_top = 166.0
margin_right = 95.0
margin_bottom = 180.0
text = "Operation:"

[node name="Op" type="OptionButton" parent="Buttons"]
margin_top = 184.0
margin_right = 95.0
margin_bottom = 204.0

[node name="UseMod" type="CheckBox" parent="Buttons"]
margin_top = 208.0
margin_right = 95.0
margin_bottom = 232.0
text = "Use mod()"

[node name="Tubes" type="CheckBox" parent="Buttons"]
margin_top = 236.0
margin_right = 95.0
margin_bottom = 260.0
text = "Add tubes"

[node name="Twist" type="CheckBox" parent="Buttons"]
margin_top = 264.0
margin_right = 95.0
margin_bottom = 288.0
text = "Twist!"

[node name="Shading" type="OptionButton" parent="Buttons"]
margin_top = 292.0
margin_right = 95.0
margin_bottom = 312.0
[connection signal="mouse_entered" from="Background" to="." method="unfocus"]
[connection signal="mouse_entered" from="Canvas" to="." method="unfocus"]
[connection signal="toggled" from="Buttons/Twist" to="." method="_on_Twist_toggled"]
